--- a/flex.css
+++ b/flex.css
@@ -11,7 +11,7 @@ body {
   width: 20%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 5px;
   background-color: rgba(0, 0, 0, 0);
   justify-content: center;
   align-content: center;
@@ -23,14 +23,14 @@ body {
 
 .parrafo_2 {
   color: rgba(255, 255, 255, 0.397);
-  margin-top: 0%;
+  margin-left: 15%;
 }
 
 #columna_2 {
   width: 20%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 7px;
   background-color: rgba(0, 0, 0, 0);
   justify-content: center;
   align-content: center;
@@ -42,14 +42,14 @@ body {
 
 .parrafo-2 {
   color: rgba(255, 255, 255, 0.397);
-  margin-top: 0%;
+  margin-left: 15%;
 }
 
 #columna_3 {
   width: 20%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 7px;
   background-color: rgba(0, 0, 0, 0);
   justify-content: center;
   align-content: center;
@@ -60,13 +60,14 @@ body {
 
 .parrafo2 {
   color: rgba(255, 255, 255, 0.397);
+  margin-left: 15%;
 }
 
 #columna_4 {
   width: 20%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 7px;
   background-color: rgba(0, 0, 0, 0);
   justify-content: center;
   align-content: center;
@@ -78,7 +79,7 @@ body {
 
 .parrafo-dos {
   color: rgba(255, 255, 255, 0.397);
-  margin-left: 15px;
+  margin-left: 15%;
 }
 
 .center {
@@ -89,9 +90,10 @@ body {
 
 .fila {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  margin-top: 10%;
+  gap: 45px;
+  margin-top: 18%;
 }
 
 p {
